rag_output.txt
  File "/workspaces/Books-data-capstone/RAG2.py", line 14
    !wget -O Books.csv "https://gist.githubusercontent.com/jaidevd/23aef12e9bf56c618c41/raw/c05e98672b8d52fa0cb94aad80f75eb78342e5d4/books.csv"
    ^
SyntaxError: invalid syntax
